deploy/kubernetes/namespace.yml
# AutonomousVehiclePerception/deploy/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: av-perception
  labels:
    app: av-perception
